manifests/nginx-test3-deploy.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: nginx-test3
  labels:
    app: nginx-test3
    version: 0.0.1
    backstage.io/kubernetes-id: nginx-test3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx-test3
        version: 0.0.1
        backstage.io/kubernetes-id: nginx-test3
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPULimit: "200m"
        sidecar.istio.io/proxyMemoryLimit: "128Mi"        
    spec:
      containers:
      - name: nginx-test3
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            port: 80
            path: /
        livenessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 3
          periodSeconds: 15
