manifests/nginx-test3-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test3-svc
  labels:
    app: nginx-test3
    version: 0.0.1
    backstage.io/kubernetes-id: nginx-test3
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nginx-test3
